--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,6 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
   </head>
-{% raw %}
   <body>
     <div class="container">
       <h1>AYY LMAO</h1>
@@ -16,7 +15,7 @@
           <p>poop</p>
           <canvas id="main"></canvas>
           <p>
-            <button id="clear" class="btn btn-default">{{2+2}}</button>
+            <button id="click" class="btn btn-default">LCICK ME</button>
           </p>
         </div>
         <div class="col-md-6">
@@ -26,5 +25,4 @@
       </div>
     </div>
   </body>
-{% endraw %}
 </html>
