trying to get post to work

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,13 @@
       <div class="row">
         <div class="col-md-6">
           <p>poop</p>
-          <canvas id="main"></canvas>
           <p>
-            <button id="click" class="btn btn-default">LCICK ME</button>
+            <button id="click" name="click" class="btn btn-default">LCICK ME</button>
           </p>
         </div>
         <div class="col-md-6">
           <p>output:</p>
-	  <div id="output"></div>
+	  <div id="output" name="output"></div>
         </div>
       </div>
     </div>
