--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,7 @@
     <title>MNIST</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('src', filename='js/main.js') }}"></script>
   </head>
   <body>
     <div class="container">
