--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 		alert("Here");
 		$.ajax({
 			url: '/api/mnist',
-			method: 'GET',
+			method: 'POST',
 			contentType: 'application/json',
 			data: JSON.stringify('aaa'),
       success: function(data){
