--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 			url: '/api/mnist',
 			method: 'POST',
 			contentType: 'application/json',
-			data: JSON.stringify('aaa'),
+			data: {'name':'owen'},
       success: function(data){
         alert(data);
       },
