--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,8 @@
 		$.ajax({
 			url: '/api/mnist',
 			method: 'POST',
-			contentType: 'application/json',
-			data: {'name':'owen'},
+			contentType: 'text/html',
+			data: "ayy",
       success: function(data){
         alert(data);
       },
