--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
     //     alert('error!');
     //   }
 		// });
-    var posting = $.post('/api/mnist', { 'aa': 'aa' } );
+    var posting = $.post('/api/mnist', 'www.com' );
     posting.done(function( data ) {
       $('#output').text(data);
     });
