--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,15 @@
           <p>poop</p>
           <p>
           <form id="click" name="click">
-            <input type="submit" name="form" value="Send">
+            <label for="search">Search:</label>
+            <input type="text" name="search"/> <br>
+            <input type="submit" name="form" value="Send"/>
           </form>
           </p>
         </div>
         <div class="col-md-6">
           <p>output:</p>
-	  <div id="output" name="output"></div>
+	        <div id="output" name="output"></div>
         </div>
       </div>
     </div>
