--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <div class="col-md-6">
           <p>poop</p>
           <p>
-          <form id="click" name="click">
+          <form id="click" name="click" method="post">
             <label for="search">Search:</label>
             <input type="text" name="search"/> <br>
             <input type="submit" name="form" value="Send"/>
