--- a/templates/index.html
+++ b/templates/index.html
@@ -28,10 +28,18 @@
     </div>
 	<script>
 	$('#click').submit(function() {
-    var posting = $.post('/api/classify', $("#click").serialize() );
-    posting.done(function( data ) {
-      $('#output').html("");
-      $('#output').append(data);
+    $.ajax({
+        url:'/api/classify',
+        type:'post',
+        data:$('#click').serialize(),
+        success:function(data){
+            alert(data);
+        }
+    });
+    // var posting = $.post('/api/classify', $("#click").serialize() );
+    // posting.done(function( data ) {
+    //   $('#output').html("");
+    //   $('#output').append(data);
     //  $.each(data.results, function(idx, obj) {
         //$('#output').append(obj.name + "  ");
         //$('#output').append(obj.score);
