--- a/templates/index.html
+++ b/templates/index.html
@@ -1,53 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>MNIST</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
+
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <script src="static/js/jquery-1.9.0.js"> </script>
   </head>
   <body>
-    <div class="container">
-      <h1>AYY LMAO</h1>
-      <div class="row">
-        <div class="col-md-6">
-          <p>poop</p>
-          <p>
-          <form id="click" name="click" method="post">
-            <label for="search">Search:</label>
-            <input type="text" name="search"/> <br>
-            <input type="submit" name="form" value="Send"/>
-          </form>
-          </p>
-        </div>
-        <div class="col-md-6">
-          <p>output:</p>
-	        <div id="output" name="output"></div>
-        </div>
-      </div>
-    </div>
-	<script>
-	$('#click').submit(function() {
-    $.ajax({
-        url:'/api/classify',
-        type:'post',
-        data:$('#click').serialize(),
-        success:function(data){
-            alert(data);
-        }
-    });
-    // var posting = $.post('/api/classify', $("#click").serialize() );
-    // posting.done(function( data ) {
-    //   $('#output').html("");
-    //   $('#output').append(data);
-    //  $.each(data.results, function(idx, obj) {
-        //$('#output').append(obj.name + "  ");
-        //$('#output').append(obj.score);
-        //$('#output').append('<br><br>');
 
-    //  });
-    });
-	});
-	</script>
+    <div class="container">
+      <form class="form-signin" role="form">
+        <h2 class="form-signin-heading">Do </h2>
+        <input type="text" name="search" class="form-control"required autofocus>
+        <button class="btn btn-lg btn-primary btn-block" type="button">Do</button>
+      </form>
+    </div>
+
   </body>
 </html>
+	<script>
+  $(function() {
+    $('button').click(function() {
+        var input = $('#search').val();
+        $.ajax({
+            url: '/api/classify',
+            data: $('form').serialize(),
+            type: 'POST',
+            success: function(response) {
+                alert(response);
+            },
+            error: function(error) {
+                alert(error);
+            }
+        });
+    });
+  });
+
+	</script>
