--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             data: $('form').serialize(),
             type: 'POST',
             success: function(response) {
-                alert(response);
+                alert(response.results);
             },
             error: function(error) {
                 alert(error);
