--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>MNIST</title>
+    <title>Doggo</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
@@ -20,6 +20,10 @@
         <button class="btn btn-lg btn-primary btn-block" type="button">Do</button>
       </form>
     </div>
+
+    <div id="temp"></div>
+    <div id="bar"></div>
+
     <p>RESULTS:</p>
     <div name="output" id="output"></div>
 
@@ -27,25 +31,28 @@
 </html>
 	<script>
   $(function() {
+    $( "#temp" ).load( "progress.html" );
     $('button').click(function() {
-        var input = $('#search').val();
-        $.ajax({
-            url: '/api/classify',
-            data: $('form').serialize(),
-            type: 'POST',
-            success: function(res) {
-              $('#output').html("");
-              var i
-              for (i=0; i <= 4; i++) {
-                $('#output').append(res.results[i].name + "  ");
-                $('#output').append(res.results[i].score);
-                $('#output').append("<br><br>");
-              }
-            },
-            error: function(error) {
-                alert(error);
+      $.ajax({url: "/loadProgress", success: function(result){
+  			$("#bar").html(result);
+  		}});
+      var input = $('#search').val();
+      $.ajax({
+          url: '/api/classify',
+          data: $('form').serialize(),
+          type: 'POST',
+          success: function(res) {
+            $('#output').html("");
+            for (var i=0; i <= res.results.length; i++) {
+              $('#output').append(res.results[i].name + "  ");
+              $('#output').append(res.results[i].score);
+              $('#output').append("<br><br>");
             }
-        });
+          },
+          error: function(error) {
+              alert(error);
+          }
+      });
     });
   });
 	</script>
