--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,6 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
 
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <script src="static/js/jquery-1.9.0.js"> </script>
   </head>
   <body>
 
@@ -17,7 +14,7 @@
       <form class="form-signin" role="form">
         <h2 class="form-signin-heading">Do </h2>
         <input type="text" name="search" class="form-control"required autofocus>
-        <button class="btn btn-lg btn-primary btn-block" type="button">Do</button>
+        <button id="sendButton" class="btn btn-lg btn-primary btn-block" type="button">Do</button>
       </form>
     </div>
 
@@ -31,11 +28,12 @@
 </html>
 	<script>
   $(function() {
-    $( "#temp" ).load( "progress.html" );
-    $('button').click(function() {
+    $('#sendButton').click(function() {
+      $( "#temp" ).load( "progress.html" );
       $.ajax({url: "/loadProgress", success: function(result){
   			$("#bar").html(result);
         var input = $('#search').val();
+
         $.ajax({
             url: '/api/classify',
             data: $('form').serialize(),
@@ -53,7 +51,6 @@
             }
         });
   		}});
-
     });
   });
 	</script>
