--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Doggo</title>
-    <!-- Latest compiled and minified CSS -->
-   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
 
-   <!-- jQuery library -->
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-
-   <!-- Latest compiled JavaScript -->
-   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <script src="static/js/jquery-1.9.0.js"> </script>
   </head>
   <body>
 
@@ -19,7 +17,7 @@
       <form class="form-signin" role="form">
         <h2 class="form-signin-heading">Do </h2>
         <input type="text" name="search" class="form-control"required autofocus>
-        <button id="sendButton" class="btn btn-lg btn-primary btn-block" type="button">Do</button>
+        <button class="btn btn-lg btn-primary btn-block" type="button">Do</button>
       </form>
     </div>
 
@@ -30,19 +28,31 @@
     <div name="output" id="output"></div>
 
   </body>
-  <script>
-  $(document).ready(function(){
-    $('#sendButton').click(function() {
-      $( "#temp" ).load( "progress.html" );
+</html>
+	<script>
+  $(function() {
+    $( "#temp" ).load( "progress.html" );
+    $('button').click(function() {
+      $.ajax({url: "/loadProgress", success: function(result){
+  			$("#bar").html(result);
+  		}});
+      var input = $('#search').val();
       $.ajax({
-        url: "/loadProgress",
-        success: function(result){
-          $("#bar").html(result);
-          var input = $('#search').val();
-        }
+          url: '/api/classify',
+          data: $('form').serialize(),
+          type: 'POST',
+          success: function(res) {
+            $('#output').html("");
+            for (var i=0; i <= res.results.length; i++) {
+              $('#output').append(res.results[i].name + "  ");
+              $('#output').append(res.results[i].score);
+              $('#output').append("<br><br>");
+            }
+          },
+          error: function(error) {
+              alert(error);
+          }
       });
     });
-    return false;
   });
-  </script>
-</html>
+	</script>
