--- a/templates/index.html
+++ b/templates/index.html
@@ -33,26 +33,29 @@
   $(function() {
     $( "#temp" ).load( "progress.html" );
     $('button').click(function() {
-      $.ajax({url: "/loadProgress", success: function(result){
-  			$("#bar").html(result);
-        var input = $('#search').val();
-        $.ajax({
-            url: '/api/classify',
-            data: $('form').serialize(),
-            type: 'POST',
-            success: function(res) {
-              $('#output').html("");
-              for (var i=0; i <= res.results.length; i++) {
-                $('#output').append(res.results[i].name + "  ");
-                $('#output').append(res.results[i].score);
-                $('#output').append("<br><br>");
+      $.ajax({
+        url: "/loadProgress",
+        success: function(result){
+    			$("#bar").html(result);
+          var input = $('#search').val();
+          $.ajax({
+              url: '/api/classify',
+              data: $('form').serialize(),
+              type: 'POST',
+              success: function(res) {
+                $('#output').html("");
+                for (var i=0; i <= res.results.length; i++) {
+                  $('#output').append(res.results[i].name + "  ");
+                  $('#output').append(res.results[i].score);
+                  $('#output').append("<br><br>");
+                }
+                return false;
+              },
+              error: function(error) {
+                  alert(error);
+                  return false;
               }
-            },
-            error: function(error) {
-                alert(error);
-            }
-            return false;
-        });
+          });
   		}});
     });
   });
