--- a/templates/progress.html
+++ b/templates/progress.html
@@ -9,6 +9,11 @@
     source.onmessage = function(event) {
         $('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
     }
+    if ($('.progress-bar').css('width') == '100%')
+    {
+       source = undefined;
+       $('.progress-bar').hide();
+    }
     </script>
 </head>
 <body>
