--- a/templates/index.html
+++ b/templates/index.html
@@ -21,16 +21,24 @@
     </div>
 
     <div id="temp"></div>
-    <div id="bar"></div>
+    <div class="progress" style="width: 50%; margin: 50px;">
+        <div class="progress-bar progress-bar-striped active"  role="progressbar"
+        aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+    </div>
 
     <p>RESULTS:</p>
     <div name="output" id="output"></div>
 
   </body>
 </html>
+  <script>
+    var source = new EventSource("/progress");
+    source.onmessage = function(event) {
+        $('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
+    }
+  </script>
 	<script>
   $(function() {
-    $( "#temp" ).load( "progress.html" );
     $('button').click(function() {
       $.ajax({
         url: "/loadProgress",
