--- a/templates/index.html
+++ b/templates/index.html
@@ -21,13 +21,15 @@
     </div>
 
     <div id="temp"></div>
-    <div class="progress" style="width: 50%; margin: 50px;">
+    <div name="bar" id="bar" class="progress" style="width: 50%; margin: 50px;">
         <div class="progress-bar progress-bar-striped active"  role="progressbar"
         aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
     </div>
 
+  <div>
     <p>RESULTS:</p>
     <div name="output" id="output"></div>
+  </div>
 
   </body>
 </html>
@@ -43,13 +45,13 @@
       $.ajax({
         url: "/loadProgress",
         success: function(result){
-    			$("#bar").html(result);
           var input = $('#search').val();
           $.ajax({
               url: '/api/classify',
               data: $('form').serialize(),
               type: 'POST',
               success: function(res) {
+                $('#bar').hide();
                 $('#output').html("");
                 for (var i=0; i <= res.results.length; i++) {
                   $('#output').append(res.results[i].name + "  ");
