--- a/templates/index.html
+++ b/templates/index.html
@@ -33,39 +33,39 @@
 
   </body>
 </html>
-  <script>
+  <!-- <script>
     var source = new EventSource("/progress");
     source.onmessage = function(event) {
         $('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
     }
-  </script>
+  </script> -->
 	<script>
   $(function() {
     $('button').click(function() {
+      var source = new EventSource("/progress");
+      source.onmessage = function(event) {
+          $('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
+      }
+
+      var input = $('#search').val();
       $.ajax({
-        url: "/loadProgress",
-        success: function(result){
-          var input = $('#search').val();
-          $.ajax({
-              url: '/api/classify',
-              data: $('form').serialize(),
-              type: 'POST',
-              success: function(res) {
-                $('#bar').hide();
-                $('#output').html("");
-                for (var i=0; i <= res.results.length; i++) {
-                  $('#output').append(res.results[i].name + "  ");
-                  $('#output').append(res.results[i].score);
-                  $('#output').append("<br><br>");
-                }
-                return false;
-              },
-              error: function(error) {
-                  alert(error);
-                  return false;
-              }
-          });
-  		}});
-    });
+          url: '/api/classify',
+          data: $('form').serialize(),
+          type: 'POST',
+          success: function(res) {
+            $('#output').html("");
+            for (var i=0; i <= res.results.length; i++) {
+              $('#output').append(res.results[i].name + "  ");
+              $('#output').append(res.results[i].score);
+              $('#output').append("<br><br>");
+            }
+            return false;
+          },
+          error: function(error) {
+              alert(error);
+              return false;
+          }
+      });
+		});
   });
 	</script>
