--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,9 @@
 
     <div id="temp"></div>
     <div name="bar" id="bar" class="progress" style="width: 50%; margin: 50px;">
-        <div class="progress-bar progress-bar-striped active"  role="progressbar"
+      <div class="progress-bar progress-bar-striped active"  role="progressbar"
         aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+      </div>
     </div>
 
   <div>
@@ -50,6 +51,7 @@
       var input = $('#search').val();
       $.ajax({
           url: '/api/classify',
+          async: false,
           data: $('form').serialize(),
           type: 'POST',
           success: function(res) {
