--- a/templates/index.html
+++ b/templates/index.html
@@ -47,16 +47,15 @@
       source.onmessage = function(event) {
           $('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
       }
-
       var input = $('#search').val();
       $.ajax({
           url: '/api/classify',
-          async: false,
           data: $('form').serialize(),
           type: 'POST',
           success: function(res) {
             $('#output').html("");
             for (var i=0; i <= res.results.length; i++) {
+              $('.progress-bar').hide();
               $('#output').append(res.results[i].name + "  ");
               $('#output').append(res.results[i].score);
               $('#output').append("<br><br>");
