--- a/templates/index.html
+++ b/templates/index.html
@@ -20,10 +20,9 @@
       </form>
     </div>
 
-    <div id="temp"></div>
-    <div name="bar" id="bar" class="progress" style="width: 50%; margin: 50px;">
-      <div class="progress-bar progress-bar-striped active"  role="progressbar"
-        aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+    <div class="progress">
+      <div id="progressBar" name="progressBar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+        Calculating...
       </div>
     </div>
 
@@ -34,20 +33,22 @@
 
   </body>
 </html>
-  <!-- <script>
-    var source = new EventSource("/progress");
-    source.onmessage = function(event) {
-        $('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
-    }
-  </script> -->
-	<script>
-  $.wait = function(ms) {
-      var defer = $.Deferred();
-      setTimeout(function() { defer.resolve(); }, ms);
-      return defer;
-  };
 
-  var getResults = function() {
+	<script>
+  function progressBar() {
+    var elem = document.getElementById("progressBar");
+    var width = 1;
+    var id = setInterval(frame, 100);
+    function frame() {
+      if (width >= 100) {
+        clearInterval(id);
+      } else {
+        width++;
+        elem.style.width = width + '%';
+      }
+    }
+  }
+  function classify() {
     var input = $('#search').val();
     $.ajax({
         url: '/api/classify',
@@ -67,16 +68,13 @@
             return false;
         }
     });
-  };
+  }
 
   $(function() {
     $('button').click(function() {
-      source = new EventSource("/progress");
-      source.onmessage = function(event) {
-        $('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
-      };
+      progressBar();
 
-      $.wait(5000).then(getResults());
+      classify();
 		});
   });
 	</script>
