--- a/templates/index.html
+++ b/templates/index.html
@@ -18,24 +18,26 @@
         <input type="text" name="search" class="form-control"required autofocus>
         <button class="btn btn-lg btn-primary btn-block" type="button">Do</button>
       </form>
-    </div>
 
-    <div class="progress">
-      <div id="progressBar" name="progressBar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
-        Calculating...
+      <div class="progress">
+        <div id="progressBar" name="progressBar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+          Calculating...
+        </div>
       </div>
     </div>
 
-  <div>
-    <p>RESULTS:</p>
-    <div name="output" id="output"></div>
-  </div>
+
+    <div>
+      <p>RESULTS:</p>
+      <div name="output" id="output"></div>
+    </div>
 
   </body>
 </html>
 
 	<script>
   function progressBar() {
+    $('#progressBar').show();
     var elem = document.getElementById("progressBar");
     var width = 1;
     var id = setInterval(frame, 100);
@@ -55,6 +57,7 @@
         data: $('form').serialize(),
         type: 'POST',
         success: function(res) {
+          $('#progressBar').hide();
           $('#output').html("");
           for (var i=0; i <= res.results.length; i++) {
             $('#output').append(res.results[i].name + "  ");
@@ -71,6 +74,7 @@
   }
 
   $(function() {
+    $('#progressBar').hide();
     $('button').click(function() {
       progressBar();
 
