--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,11 @@
         <input type="text" name="search" class="form-control"required autofocus>
         <button class="btn btn-lg btn-primary btn-block" type="button">Do</button>
       </form>
-
+      <form action="uploadFile" method="post" enctype="multipart/form-data">
+        <input type="file" name="file"><br /><br />
+        <input type="submit" value="Upload">
+      </form>
+      <br><br>
       <div class="progress">
         <div id="progressBar" name="progressBar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
           Calculating...
@@ -40,7 +44,7 @@
     $('#progressBar').show();
     var elem = document.getElementById("progressBar");
     var width = 1;
-    var id = setInterval(frame, 100);
+    var id = setInterval(frame, 75);
     function frame() {
       if (width >= 100) {
         clearInterval(id);
