--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <input type="text" name="search" class="form-control"required autofocus>
         <button class="btn btn-lg btn-primary btn-block" type="button">Do</button>
       </form>
-      <form action="uploadFile" method="post" enctype="multipart/form-data">
+      <form action="upload" method="post" enctype="multipart/form-data">
         <input type="file" name="file"><br /><br />
         <input type="submit" value="Upload">
       </form>
