--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
       classify();
 		});
 
-    $('form').submit(function (e) {
+    $('#uploadForm').submit(function (e) {
       progressBar();
 
       var data;
