im actually stupid but this works now

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
       //         }
       //     },
       //     mimeType: 'multipart/form-data',    //Property added in 1.5.1
-          success: function (data) {
+          success: function (res) {
             $('#progressBar').hide();
             $('#output').html("");
             for (var i=0; i <= res.results.length; i++) {
