--- a/templates/index.html
+++ b/templates/index.html
@@ -1,55 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Doggo</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="container">
       <h2>Dynamic Tabs</h2>
       <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-        <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
-        <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
-        <li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
+        <li class="active"><a data-toggle="tab" href="#home">&nbsp;&nbsp;&nbsp;&nbsp;By url&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+        <li><a data-toggle="tab" href="#menu1">By Upload</a></li>
       </ul>
 
       <div class="tab-content">
         <div id="home" class="tab-pane fade in active">
-          <h3>HOME</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <form class="form-signin" role="form">
+            <h3 class="form-signin-heading"></h3>
+            <input placeholder="Enter url" type="text" name="search" class="form-control"required autofocus>
+            <button id="urlButton" class="btn btn-lg btn-primary" type="button">Do</button>
+          </form>
         </div>
         <div id="menu1" class="tab-pane fade">
-          <h3>Menu 1</h3>
-          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <form id="uploadForm" name="uploadForm">
+            <h3 class="form-signin-heading"></h3>
+            <input class="form-control" type="file" id="file" name="file"><br /><br />
+            <button id="uploadButton" class="btn btn-lg btn-primary" type="button">Do</button>
+          </form>
         </div>
         <div id="menu2" class="tab-pane fade">
           <h3>Menu 2</h3>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-        </div>
-        <div id="menu3" class="tab-pane fade">
-          <h3>Menu 3</h3>
-          <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
         </div>
       </div>
     </div>
 
 
     <div class="container">
-      <form class="form-signin" role="form">
-        <h2 class="form-signin-heading">Do </h2>
-        <input type="text" name="search" class="form-control"required autofocus>
-        <button class="btn btn-lg btn-primary" type="button">Do</button>
-      </form>
-      <form id="uploadForm" name="uploadForm">
-        <input type="file" id="file" name="file"><br /><br />
-        <input type="submit" value="Upload">
-      </form>
-      <br><br>
+
       <div class="progress">
         <div id="progressBar" name="progressBar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
           Calculating...
@@ -62,6 +54,49 @@
       <p>RESULTS:</p>
       <div name="output" id="output"></div>
     </div>
+
+  <table class="table table-hover" id="resultsTable">
+  <thead>
+    <tr>
+      <th id="number">#</th>
+      <th id="picture">Picture</th>
+      <th id="breed">Breed</th>
+      <th id="probability">Probability</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr id="row1" class="success">
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr id="row2" class="info">
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr id="row3" class="warning">
+      <th scope="row">3</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr id="row4" class="warning">
+      <th scope="row">4</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr id="row5" class="danger">
+      <th scope="row">5</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+  </tbody>
+</table>
 
   </body>
 </html>
@@ -88,13 +123,7 @@
         data: $('form').serialize(),
         type: 'POST',
         success: function(res) {
-          $('#progressBar').hide();
-          $('#output').html("");
-          for (var i=0; i <= res.results.length; i++) {
-            $('#output').append(res.results[i].name + "  ");
-            $('#output').append(res.results[i].score);
-            $('#output').append("<br><br>");
-          }
+          populate(res);
           return false;
         },
         error: function(error) {
@@ -104,9 +133,22 @@
     });
   }
 
+  function populate(res) {
+    $('#progressBar').hide();
+    $('#output').html("");
+    for (var i=0; i <= res.results.length; i++) {
+      $('#row'+i).find('td').eq($('#picture').index())
+        .append("  ");
+      $('#row'+i).find('td').eq($('#breed').index())
+        .append(res.results[i].name + "  ");
+      $('#row'+i).find('td').eq($('#probability').index())
+        .append(res.results[i].score + "  ");
+    }
+  }
+
   $(function() {
     $('#progressBar').hide();
-    $('button').click(function() {
+    $('#urlButton').click(function() {
       progressBar();
 
       classify();
@@ -114,10 +156,6 @@
 
     $('#uploadForm').submit(function (e) {
       progressBar();
-
-      // var data;
-      // data = new FormData();
-      // data.append('file', $('#file')[0].files[0]);
 
       var form_data = new FormData($('#uploadForm')[0]);
       $.ajax({
@@ -127,27 +165,8 @@
           contentType: false,
           cache: false,
           processData: false,
-
-      // $.ajax({
-      //     url: '/upload',
-      //     data: data,
-      //     processData: false,
-      //     type: 'POST',
-      //     contentType: 'multipart/form-data',
-      //     beforeSend: function (x) {
-      //         if (x && x.overrideMimeType) {
-      //             x.overrideMimeType("multipart/form-data");
-      //         }
-      //     },
-      //     mimeType: 'multipart/form-data',    //Property added in 1.5.1
           success: function (res) {
-            $('#progressBar').hide();
-            $('#output').html("");
-            for (var i=0; i <= res.results.length; i++) {
-              $('#output').append(res.results[i].name + "  ");
-              $('#output').append(res.results[i].score);
-              $('#output').append("<br><br>");
-            }
+            populate(res);
             return false;
           },
           error: function(error) {
