--- a/templates/index.html
+++ b/templates/index.html
@@ -124,8 +124,8 @@
           return false;
         },
         error: function(error) {
-            alert(error);
-            return false;
+          alert(error);
+          return false;
         }
     });
   }
@@ -144,8 +144,8 @@
           return false;
         },
         error: function(error) {
-            alert(error);
-            return false;
+          alert(error);
+          return false;
         }
     });
     //e.preventDefault();
@@ -190,7 +190,7 @@
       classify();
 		});
 
-    $('#urlButton').click(function() {
+    $('#uploadButton').click(function() {
       progressBar();
       classifyUpload();
     });
